# rust_spikes

./: LICENSE  README.md
commandline_parameters/: Cargo.toml  README.md
commandline_parameters/.cargo/: config.toml
commandline_parameters/src/: main.rs
messaging_amqp/: README.md
messaging_amqp/1_hello/: Cargo.toml  REAME.md
messaging_amqp/2_work_queues/: Cargo.toml  README.md  test_production.sh
messaging_amqp/2_work_queues/.cargo/: config.toml
messaging_amqp/3_publish_subscribe/: Cargo.toml  README.md
messaging_amqp/3_publish_subscribe/.cargo/: config.toml
messaging_amqp/4_routing/: Cargo.toml  README.md
messaging_amqp/4_routing/.cargo/: config.toml
messaging_amqp/5_topics/: Cargo.toml  README.md
messaging_amqp/5_topics/.cargo/: config.toml
opentelemetry/: README.md
opentelemetry/1_first_jaeger/: Cargo.toml  README.md
opentelemetry/1_first_jaeger/.cargo/: config.toml
opentelemetry/1_first_jaeger/src/: main.rs
opentelemetry/2_span_with_sub_spans/: Cargo.toml  README.md
opentelemetry/2_span_with_sub_spans/.cargo/: config.toml
opentelemetry/2_span_with_sub_spans/src/: main.rs
opentelemetry/3_follow_span_in_sub_function/: Cargo.toml  README.md
opentelemetry/3_follow_span_in_sub_function/.cargo/: config.toml
opentelemetry/3_follow_span_in_sub_function/src/: main.rs
return_struct/: Cargo.toml
return_struct/src/: main.rs
tokio/: README.md
tokio/02_spawning/: Cargo.toml
tokio/03_shared-state/: Cargo.toml
tokio/04a_mpsc_channels/: Cargo.toml  README.md
tokio/04b_mpsc_task_intercom/: Cargo.toml  README.md
tokio/04c_channels/: Cargo.toml  README.md
tokio/05_io/: Cargo.toml
websocket/tokio-tungstenite/: README.md
websocket/tokio-tungstenite/1_hello/: Cargo.toml  README.md
websocket/tokio-tungstenite/1_hello/.cargo/: config.toml
(+13 files in other folders)
