[package]
name = "first_jaeger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#opentelemetry = { path = "../../opentelemetry" }
opentelemetry = "0.21.0"
#opentelemetry-otlp = { path = "../../opentelemetry-otlp", features = ["tonic"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic"] }
#opentelemetry_sdk = { path = "../../opentelemetry-sdk", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
tokio = { version = "1.0", features = ["full"] }
