[package]
name = "follow_span_in_sub_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
opentelemetry = "0.21.0"
opentelemetry-otlp = { version = "0.14.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
rand = { version = "0.8" }
tokio = { version = "1.0", features = ["full"] }
